# experiments

./: pyproject.toml
mean_dynamics/: 01_gaussian_variable_convergence.py  02_power_variable_coverge.py  README.md
sample_survey/: README.md
